@@ -99,20 +99,14 @@ public class SysFileUploadCommand implements Callable<Integer> {
 
         var delegate = isSpecialFile()
                 ? new SysFileUploadSuite(
-                        bytesPerAppend,
-                        appendsPerBurst,
-                        restartFromFailure,
-                        srcDir,
-                        config.asSpecConfig(),
-                        sysFile,
-                        dryRun)
-                : new SysFileUploadSuite(srcDir, config.asSpecConfig(), sysFile, dryRun);
+                        bytesPerAppend, appendsPerBurst, restartFromFailure, srcDir, config, sysFile, dryRun)
+                : new SysFileUploadSuite(srcDir, config, sysFile, dryRun);
 
         delegate.runSuiteSync();
 
         final var finalSpecs = delegate.getFinalSpecs();
         if (!finalSpecs.isEmpty()) {
-            if (finalSpecs.get(0).getStatus() == HapiSpec.SpecStatus.PASSED) {
+            if (finalSpecs.getFirst().getStatus() == HapiSpec.SpecStatus.PASSED) {
                 COMMON_MESSAGES.info("SUCCESS - Uploaded all requested system files");
             } else {
                 COMMON_MESSAGES.warn("FAILED Uploading requested system files");
