@@ -1,6 +1,7 @@
 // SPDX-License-Identifier: Apache-2.0
 package com.hedera.services.yahcli.commands.system;
 
+import static com.hedera.services.bdd.spec.HapiPropertySource.asEntityString;
 import static com.hedera.services.yahcli.output.CommonMessages.COMMON_MESSAGES;
 
 import com.hedera.services.bdd.spec.HapiSpec;
@@ -8,8 +9,8 @@ import com.hedera.services.yahcli.Yahcli;
 import com.hedera.services.yahcli.config.ConfigUtils;
 import com.hedera.services.yahcli.suites.UpgradeHelperSuite;
 import com.hedera.services.yahcli.suites.Utils;
-import com.swirlds.common.utility.CommonUtils;
 import java.util.concurrent.Callable;
+import org.hiero.base.utility.CommonUtils;
 import picocli.CommandLine;
 
 @CommandLine.Command(
@@ -40,15 +41,15 @@ public class TelemetryUpgradeCommand implements Callable<Integer> {
     public Integer call() throws Exception {
         final var config = ConfigUtils.configFrom(yahcli);
 
-        final var upgradeFile = "0.0." + upgradeFileNum;
+        final var upgradeFile =
+                asEntityString(config.shard().getShardNum(), config.realm().getRealmNum(), upgradeFileNum);
         final var unhexedHash = CommonUtils.unhex(upgradeFileHash);
         final var startInstant = Utils.parseFormattedInstant(startTime);
-        final var delegate =
-                new UpgradeHelperSuite(config.asSpecConfig(), unhexedHash, upgradeFile, startInstant, true);
+        final var delegate = new UpgradeHelperSuite(config, unhexedHash, upgradeFile, startInstant, true);
 
         delegate.runSuiteSync();
 
-        if (delegate.getFinalSpecs().get(0).getStatus() == HapiSpec.SpecStatus.PASSED) {
+        if (delegate.getFinalSpecs().getFirst().getStatus() == HapiSpec.SpecStatus.PASSED) {
             COMMON_MESSAGES.info("SUCCESS - NMT telemetry upgrade in motion from " + upgradeFile + " artifacts ZIP");
         } else {
             COMMON_MESSAGES.warn("FAILED - NMT telemetry upgrade is not in motion ");
